--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,20 @@ freeline_project_description.json
 
 *.idea/*
 *misc.xml
+
+#some local files
+*/.settings/
+*/.DS_Store
+.DS_Store
+*/.idea/
+.idea/*
+*/misc.xml
+
+
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+/build
+.idea/
+app/app.iml
